<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/back"
    app:title="@string/app_name"
    android:titleTextColor="@color/white"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">


            <ImageButton
                android:id="@+id/maleButton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/image_background_border"
                android:contentDescription="@string/description_for_maleButton"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/femaleButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/man" />

            <ImageButton
                android:id="@+id/femaleButton"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"

                android:background="@color/white"
                android:contentDescription="@string/description_for_femaleButton"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/maleButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/maleButton"
                app:layout_constraintTop_toTopOf="@+id/maleButton"
                app:srcCompat="@drawable/woman" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/heightLL"
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/image_background_border"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/femaleButton"
                app:layout_constraintStart_toStartOf="@+id/maleButton"
                app:layout_constraintTop_toBottomOf="@+id/maleButton"
                app:layout_constraintVertical_bias="0.0">


                <ImageButton
                    android:id="@+id/heightAddButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_heightAddButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:srcCompat="@drawable/add" />

                <ImageButton
                    android:id="@+id/heightRemoveButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_heightRemoveButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/heightEditText"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/remove" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/aleo"
                    android:gravity="center"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/heightEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/heightEditText"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/height_edit_text_value"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/heightRemoveButton"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/heightRemoveButton"
                    app:layout_constraintTop_toTopOf="@+id/heightRemoveButton" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/aleo_bold"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/cm"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/heightEditText"
                    app:layout_constraintEnd_toStartOf="@+id/heightAddButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/heightEditText"
                    app:layout_constraintTop_toTopOf="@+id/heightEditText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weightCL"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/image_background_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ageCL"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/heightLL"
                app:layout_constraintTop_toBottomOf="@+id/heightLL"
                app:layout_constraintVertical_bias="0.0">


                <ImageButton
                    android:id="@+id/weightAddButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_weightAddButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/weightRemoveButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/weightRemoveButton"
                    app:layout_constraintTop_toTopOf="@+id/weightRemoveButton"
                    app:srcCompat="@drawable/add" />

                <ImageButton
                    android:id="@+id/weightRemoveButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_weightRemoveButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/weightAddButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weightEditText"
                    app:srcCompat="@drawable/remove" />

                <EditText
                    android:id="@+id/weightEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/weight_edit_text_value"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.545"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/aleo"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ageCL"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:background="@drawable/image_background_border"
                app:layout_constraintBottom_toBottomOf="@+id/weightCL"
                app:layout_constraintEnd_toEndOf="@+id/heightLL"
                app:layout_constraintStart_toEndOf="@+id/weightCL"
                app:layout_constraintTop_toTopOf="@+id/weightCL">


                <ImageButton
                    android:id="@+id/ageAddButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_ageAddButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@+id/ageRemoveButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ageRemoveButton"
                    app:layout_constraintTop_toTopOf="@+id/ageRemoveButton"
                    app:srcCompat="@drawable/add" />

                <ImageButton
                    android:id="@+id/ageRemoveButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:contentDescription="@string/description_for_ageRemoveButton"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ageAddButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ageEditText"
                    app:srcCompat="@drawable/remove" />

                <EditText
                    android:id="@+id/ageEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/age_edit_text_value"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/aleo"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/calculateBmiButton"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:text="@string/calculate_your_bmi"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightCL" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>